--upload web ide for testing --Smarttable issue URI processing - static path conflicts with URI

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,5 @@
 PurReq = Purchase requisition
+PurReqHeader=Purchase Requisitions
 createdOn = Created On
 LastModDate = Last Modified On
 ItemNo = Purchase Requisition Item
@@ -17,3 +18,6 @@ MatGroup=Material Group
 GeneralInfo=General Information
 Items=Items
 MatTypGrp=Product Type Group
+copyPR=Copy
+deletePR=Delete
+createPR=Create
