--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-PurReq = Purchase requisition
+PurReq = Purchase Requisition
 PurReqHeader=Purchase Requisitions
 createdOn = Created On
 LastModDate = Last Modified On
@@ -6,6 +6,7 @@ ItemNo = Purchase Requisition Item
 Material = Material
 Description=Description
 PRDesc=Purchase Requisition Description
+DocTyp=Document Type
 Quantity=Quantity
 Price=Price
 DelivDate=Delivery Date
@@ -14,10 +15,19 @@ Plant=Plant
 PurOrg=Purchasing organization
 Vendor=Vendor
 Status=Status
+TotalValue=Total Value
 MatGroup=Material Group
 GeneralInfo=General Information
 Items=Items
+LimitItems=Limit Items
 MatTypGrp=Product Type Group
 copyPR=Copy
 deletePR=Delete
 createPR=Create
+editPR=Edit
+save=Save
+cancel=Cancel
+MSG_CONFIRM_DELETE_PR= Delete object
+copyItem=Copy
+UpdatePrice=Update Price
+deleteItem=Delete
