PRList jsonmodel fix version

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,6 +12,8 @@ Price=Price
 DelivDate=Delivery Date
 PurGrp=Purchasing Group
 Plant=Plant
+ValuationPrice=Valuation Price
+Requisitioner=Requisitioner
 PurOrg=Purchasing organization
 Vendor=Vendor
 Status=Status
@@ -20,7 +22,7 @@ MatGroup=Material Group
 GeneralInfo=General Information
 Items=Items
 LimitItems=Limit Items
-MatTypGrp=Product Type Group
+ProdTypGrp=Product Type Group
 copyPR=Copy
 deletePR=Delete
 createPR=Create
@@ -31,3 +33,8 @@ MSG_CONFIRM_DELETE_PR= Delete object
 copyItem=Copy
 UpdatePrice=Update Price
 deleteItem=Delete
+PRType=Document Type
+expectedValue=Expected Value
+overallLimit=Overall Limit
+AcctAssCat=Account Assignment Category
+desiredVendor=Desired Vendor
