copy/new function

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -30,6 +30,7 @@ editPR=Edit
 save=Save
 cancel=Cancel
 MSG_CONFIRM_DELETE_PR= Delete object
+CANNOT_READ_COPYPR=Cannot read Copy PR Details!
 copyItem=Copy
 UpdatePrice=Update Price
 deleteItem=Delete
