PRItem detail + account assignment

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,6 +4,7 @@ createdOn = Created On
 LastModDate = Last Modified On
 ItemNo = Purchase Requisition Item
 Material = Material
+Service = Service
 Description=Description
 PRDesc=Purchase Requisition Description
 DocTyp=Document Type
@@ -26,6 +27,8 @@ ProdTypGrp=Product Type Group
 copyPR=Copy
 deletePR=Delete
 createPR=Create
+AcctAss = Account Assignment
+AccAssCat=Account Assignment Category
 editPR=Edit
 save=Save
 cancel=Cancel
@@ -39,3 +42,9 @@ expectedValue=Expected Value
 overallLimit=Overall Limit
 AcctAssCat=Account Assignment Category
 desiredVendor=Desired Vendor
+itemsFromCrossCatalogSearch=Items From Cross Catalog Search
+QuantityAndDate=Quantity and Date
+itemsFromExternalCatalog=Items From External Catalogs
+OrderedQuantity=Ordered Quantity
+OpenQuantity=Open Quantity
+NewPR=New Purchase Requisition
