PRItem detail + account assignment

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -48,3 +48,9 @@ itemsFromExternalCatalog=Items From External Catalogs
 OrderedQuantity=Ordered Quantity
 OpenQuantity=Open Quantity
 NewPR=New Purchase Requisition
+PRItemIsClosed=Purchase Requisition Item is Closed
+PRItemIsFixed=Purchase Requisition Item is Fixed
+PlannedDelivDays=Planned Delivery Time (in Days)
+GRProcessDays=GR Processing Time (in Days)
+Valuation= Valuation
+ValuationPrice= Valuation Price
