Changes: * Fix bugs for Value Help Dialog to retrieve related field data. * Generic VHDialog now can be used for all field with proper configuration.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -54,3 +54,5 @@ PlannedDelivDays=Planned Delivery Time (in Days)
 GRProcessDays=GR Processing Time (in Days)
 Valuation= Valuation
 ValuationPrice= Valuation Price
+ReleaseDate=Release Date
+PreqDate=Purchase Requisition Date
