Added functions: * Input/Display form of PR Item Detail * Attachment for PR Item Detail (unfinished)

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,7 +15,7 @@ PurGrp=Purchasing Group
 Plant=Plant
 ValuationPrice=Valuation Price
 Requisitioner=Requisitioner
-PurOrg=Purchasing organization
+PurOrg=Purchasing Organization
 Vendor=Vendor
 Status=Status
 TotalValue=Total Value
@@ -55,4 +55,29 @@ GRProcessDays=GR Processing Time (in Days)
 Valuation= Valuation
 ValuationPrice= Valuation Price
 ReleaseDate=Release Date
-PreqDate=Purchase Requisition Date
+PreqDate=Purchase RequiTotal Valuesition Date
+PriceUnit=Price Unit
+RequisitionDate=Requisition Date
+UoM=Unit of Measure
+POPriceType=PO Price Type
+GRisExpected= Goods Receipt is Expected
+InvReceiptisExpected=Invoice Receipt is Expected
+NonValuatedGRisExpected=Non-valuated Goods Receipt is Expected
+DoNotApply=Do not apply
+AsNetPrice=As net price
+AsGroPrice=As gross price
+SrcOfSupply=Source of Supply
+AssSrcOfSupply=Assign Source of Supply
+srcDoc=Source Document
+SrcTyp=Source Type
+FixedVendor=Fixed Vendor
+ContactInfo=Contact Information
+createdBy=Created by
+changeOn=Change On
+CreationIndicator=Creation Indicator
+MRPController=MRP Controller
+ReqTrackNumber=Requirement Tracking Number
+Tel=Telephone
+Fax=Fax Number
+DelAddress=Delivery Address
+Attachment=Attachment
