This is an issue commit. Code DO NOT behave properly!

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,7 +28,7 @@ copyPR=Copy
 deletePR=Delete
 createPR=Create
 AcctAss = Account Assignment
-AccAssCat=Account Assignment Category
+AcctAssCat=Account Assignment Category
 editPR=Edit
 save=Save
 cancel=Cancel
