Functions added:  + Create + Copy ** Account asssignment is not working  + Delete (single/multi) PR

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,7 +32,9 @@ AcctAssCat=Account Assignment Category
 editPR=Edit
 save=Save
 cancel=Cancel
-MSG_CONFIRM_DELETE_PR= Delete object
+MSG_CONFIRM_DELETE_PR= Delete Purchase Requisition: {0}
+MSG_SELECT_AT_LEAST_ONE_LINE=Please select at least one line
+MSG_CONFIRM_DELETE_MULTI_PR=Delete {0} Purchase Requisition(s)?
 CANNOT_READ_COPYPR=Cannot read Copy PR Details!
 copyItem=Copy
 UpdatePrice=Update Price
