Functions added:  + Add messages to response from back-end ** Account asssignment is ACTUALLY working  + Delete (single/multi) PR    ++ this function works + return message in good + exceptional cases

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,7 @@ LastModDate = Last Modified On
 ItemNo = Purchase Requisition Item
 Material = Material
 Service = Service
+ItemDescription=Item Description
 Description=Description
 PRDesc=Purchase Requisition Description
 DocTyp=Document Type
@@ -33,6 +34,8 @@ editPR=Edit
 save=Save
 cancel=Cancel
 MSG_CONFIRM_DELETE_PR= Delete Purchase Requisition: {0}
+MSG_SUCCESS_DELETE_PR= {0} Purchase Requisition(s) deleted
+MSG_SUCCESS_DELETE_PR_SINGLE= Purchase Requisition {0} deleted
 MSG_SELECT_AT_LEAST_ONE_LINE=Please select at least one line
 MSG_CONFIRM_DELETE_MULTI_PR=Delete {0} Purchase Requisition(s)?
 CANNOT_READ_COPYPR=Cannot read Copy PR Details!
@@ -84,3 +87,4 @@ Fax=Fax Number
 DelAddress=Delivery Address
 Attachment=Attachment
 hold=Hold
+DistributionPercent=Distribution Percent
