--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,5 @@
+appTitle=Manage Purchase Requisition
+appDescription=Manage Purchase Requisition
 PurReq = Purchase Requisition
 PurReqHeader=Purchase Requisitions
 createdOn = Created On
